<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HIOFCommuting</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="fbid">1397782713810671</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="settings">Settings</string>
    <string name="fblogin">Facebook test</string>
    <string name="login">Logg inn</string>
    <string name="epost">Epost</string>
    <string name="passord">Passord</string>
    <string name="nybruker">Ny bruker?</string>
    <string name="glemtpassord">Glemt passord?</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_tab_map">TabMap</string>
    <string name="title_activity_tab_list">TabList</string>
    <string name="title_activity_tab_inbox">TabInbox</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tab_listener">TabListener</string>
    <string name="tab_kart">Kart</string>
    <string name="tab_liste">Liste</string>
    <string name="tab_inbox">Inbox</string>
    <string name="button_alternativLogin">Logg inn med epost</string>
    <string name="glemtpassordoverskrift">Glemt passord</string>
    <string name="resetpassword">Tilbakestill passord</string>
    <string name="firstname">Fornavn</string>
    <string name="lastname">Etternavn</string>
    <string name="email">Epost</string>
    <string name="choosepassword">Velg et passord</string>
    <string name="repeatpassword">Gjenta passord</string>
    <string name="choosepicture">Velg profilbilde</string>
    <string name="cameraimage">Picture of a camera</string>
    <string name="next">Neste</string>
    <string name="address">Min adresse</string>
    <string name="postal">Postnummer</string>
    <string name="institution">Institusjon</string>
    <string name="campus">Studiested</string>
    <string name="department">Avdeling</string>
    <string name="study">Studie</string>
    <string name="startingyear">Kull</string>
    <string name="carquestion">Har du bil?</string>
    <string name="readconditions">Jeg har lest og forstått betingelser</string>
    <string name="finish">Fullfør</string>

    <string-array name="institution_array">
        <item>HiØ</item>
        <item>HiB</item>
    </string-array>

    <string name="title_activity_user_information">UserInformationActivity</string>

</resources>
