<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
	<TextView 
        android:id="@+id/addresstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textSize="20sp"
        android:text="@string/address" />
    
    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
		android:layout_below="@+id/addresstxt"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPostalAddress" />	
        
	<TextView 
        android:id="@+id/postaltxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/address"
        android:textSize="20sp"
        android:text="@string/postal" />
    
    <EditText
        android:id="@+id/postal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
		android:layout_below="@+id/postaltxt"
        android:ems="10"
        android:gravity="center"
        android:inputType="number" />
    
	<Spinner
        android:id="@+id/institutionSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postal"
        android:entries="@array/institution_array"
        android:prompt="@string/institution" />

</RelativeLayout>
